--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Portfolio</title>
+    <title>ThIzH WiCk</title>
 </head>
+
 <body class="text-center">
     <h1>Thisitha Wickramaarachchi</h1>
-    <br><br>
-    <p class="typed-out">Hi I'm Thisitha, I am a Software Engineering Undergraduate in Open University of Sri Lanka. Now I am looking for a 
-        internship in the field for put my learning experience in to work.</p>
-    <br><br>
-    <h1>Skills</h1>
-    <p>HTML</p>
-    <p>CSS</p>
-    <p>JavaScript</p>
-    <p>etc.</p>
-    <br>
-    <br>
+    <div class="social">
+        <a href="https://github.com/Thizh"><img src="./assets/github.png" /></a>
+        <img src="./assets/discord.png" />
+        <img src="./assets/linkedin.png" />
+        <a href="mailto:thizhwick@gmail.com"><img src="./assets/gmail.png"></a>
+    </div>
+
 </body>
-<footer>
-    <p>thizhwick 2023</p>
-</footer>
+
 </html>
