Update index.html & style.css

--- a/index.html
+++ b/index.html
@@ -1,23 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<header>
     <meta charset="UTF-8">
+    <meta name="color-scheme" content="dark light">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="aurora.css">
+    <link rel="stylesheet" type="text/css" href="contact.css">
     <title>ThIzH WiCk</title>
-</head>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('_HXwDZaoxvauiBKzd');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
+</header>
 
-<body class="text-center">
-    <h1>Thisitha Wickramaarachchi</h1>
-    <div class="social">
-        <a href="https://github.com/Thizh"><img src="./assets/github.png" /></a>
-        <img src="./assets/discord.png" />
-        <img src="./assets/linkedin.png" />
-        <a href="mailto:thizhwick@gmail.com"><img src="./assets/gmail.png"></a>
+<body>
+    <h1 class="name">Thisitha Wickramaarachchi</h1>
+    <div class="container">
+        <div class="hero-circle">
+            <div class="hero-rotate" id="circle">
+                <div class="social">
+                    <a href="https://github.com/Thizh"><img src="./assets/github.png" /></a>
+                </div>
+                <div class="social">
+                    <a href="https://discord.com/users/dalek_thyz"><img src="./assets/discord.png" /></a>
+                </div>
+                <div class="social">
+                    <a href="https://wwww.linkedin.com/in/thizh"><img src="./assets/linkedin.png" /></a>
+                </div>
+                <div class="social">
+                    <a href="mailto:thizhwick@gmail.com"><img src="./assets/gmail.png" /></a>
+                </div>
+            </div>
+        </div>
     </div>
+    </div>
+    </div>
+    <form id="contact-form">
+        <input type="hidden" name="contact_number">
+        <label>Name</label>
+        <input type="text" name="user_name">
+        <label>Email</label>
+        <input type="email" name="user_email">
+        <label>Message</label>
+        <textarea name="message"></textarea>
+        <input type="submit" value="Send">
+    </form>
+    <article id="wrap">
+        <article id="lightings">
+            <section id="one">
+                <section id="two">
+                    <section id="three">
+                        <section id="four">
+                            <section id="five">
+                                
+                            </section>
+                        </section>
+                    </section>
+                </section>
+            </section>
+        </article>
+    </article>
 
 </body>
 
