--- a/index.html
+++ b/index.html
@@ -10,26 +10,9 @@
 </header>
 
 <body>
-    <h1 class="name">Thisitha Wickramaarachchi</h1>
-    <div class="container">
-        <div class="hero-circle">
-            <div class="hero-rotate" id="circle">
-                <div class="social">
-                    <a href="https://github.com/Thizh"><img src="./assets/github.png" /></a>
-                </div>
-                <div class="social">
-                    <a href="https://discord.com/users/dalek_thyz"><img src="./assets/discord.png" /></a>
-                </div>
-                <div class="social">
-                    <a href="https://wwww.linkedin.com/in/thizh"><img src="./assets/linkedin.png" /></a>
-                </div>
-                <div class="social">
-                    <a href="mailto:thizhwick@gmail.com"><img src="./assets/gmail.png" /></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+
+    <div id="root">
+        <script type="module" src="/src/main.jsx"></script>
     </div>
 </body>
 
