--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="color-scheme" content="dark light">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="8ttwbOKq9eFt6en9DZ38XdbdQXeyiZ5-RejtDOpqX8U" />
     
     <title>ThIzH WiCk</title>
 </header>
