--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
-    <title>hobbies</title>
+    <title>ThIzH WiCk</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mouse.css">
 </head>
