--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
+    <meta name="description" content="A undergraduate student who wants to become better Software Engineer" />
+    <meta name="keywords" content="Thisitha Wickramarachchi, Thisitha Wickramaarachchi, Thizh Wick" />
+
+    <meta property="og:title" content="Thisitha Wickramarachchi" />
+    <meta property="og:description" content="A undergraduate student who wants to become better Software Engineer" />
     <title>ThIzH WiCk</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mouse.css">
