--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <!--<li><a href="#">Home</a></li>-->
                     <li><a href="thisitha_cv.pdf">Resume</a></li>
                 </ul>
             </nav>
