--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="color-scheme" content="dark light">
     <meta name="description" content="A undergraduate student who wants to become better Software Engineer" />
     <meta name="keywords" content="Thisitha Wickramarachchi, Thisitha Wickramaarachchi, Thizh Wick" />
+    <meta name="google-site-verification" content="Cfc1CPWBKu_yqLOTXkvouMF8wwIidHgxi2bDMXhM4TA" />
 
     <meta property="og:title" content="Thisitha Wickramarachchi" />
     <meta property="og:description" content="A undergraduate student who wants to become better Software Engineer" />
