--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="#">......</a></li>
+                    <li><a href="#" style="visibility: hidden;">......</a></li>
                     <li><a href="thisitha_cv.pdf">Resume</a></li>
                 </ul>
             </nav>
