--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>ThIzH WiCk</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mouse.css">
+    <link rel="stylesheet" href="aurora.css">
 </head>
 <body>
     <script  src="./script.js"></script>
