--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col">
                 <h1 class="name">Thisitha Wickramaarachchi</h1>
-                <p style="font-size: 20px;">I write <span style="color: aqua;">Code.</span></p>
+                <p style="font-size: 20px;">AKA <span style="color: red;">Thizh Wick</span></p>
                 <a href="mailto:thizhwick@gmail.com"><button type="button">Contact Me</button></a>
             </div>
             <div class="col">
