--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Thisitha Wickramarachchi" />
     <meta property="og:description" content="A undergraduate student who wants to become better Software Engineer" />
     <title>ThIzH WiCk</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mouse.css">
     <link rel="stylesheet" href="aurora.css">
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col">
                 <h1 class="name">Thisitha Wickramaarachchi</h1>
-                <p style="font-size: 20px;">AKA <span style="color: red; font-family: 'Lobster'; font-size: 25px;">Thizh Wick</span></p>
+                <p style="font-size: 20px;">AKA <span style="color: red; font-family: 'ZCOOL_KuaiLe'; font-size: 25px;">Thizh Wick</span></p>
                 <a href="mailto:thizhwick@gmail.com"><button type="button">Contact Me</button></a>
             </div>
             <div class="col">
