--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A undergraduate student who wants to become better Software Engineer" />
     <meta name="keywords" content="Thisitha Wickramarachchi, Thisitha Wickramaarachchi, Thizh Wick" />
     <meta name="google-site-verification" content="8ttwbOKq9eFt6en9DZ38XdbdQXeyiZ5-RejtDOpqX8U" />
-
+    <link rel="icon" type="image/x-icon" href="/assets/T.ico">
     <meta property="og:title" content="Thisitha Wickramarachchi" />
     <meta property="og:description" content="A undergraduate student who wants to become better Software Engineer" />
     <title>ThIzH WiCk</title>
