--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
                 <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;" class="font-effect-fire-animation">Thizh Wick</span></p>
                 <button type="button">Who Tf is Thizh</button></a>
             </div>
+                <div id="overlay">
+        <div id="close-button" onclick="closeOverlay()">X</div>
+        <div id="overlay-content">
+        
+            <p><span>Greetings!</span> I am a passionate and dedicated software engineering undergraduate at the prestigious Open University of Sri Lanka. My journey into the world of technology and programming has been a thrilling adventure, and I'm excited to share it with you.</p>
+
+            <p>As a student with a relentless curiosity and a hunger for knowledge, I've immersed myself in the ever-evolving field of programming. Through my academic pursuits and personal projects, I've honed my skills and embraced the art of problem-solving. My journey is fueled by a desire to create innovative solutions and to explore the limitless possibilities of code.</p>
+
+            <p>My commitment to excellence is reflected in my dedication to mastering various programming languages, software development methodologies, and emerging technologies. I relish the challenges that programming presents and thrive in the pursuit of elegant, efficient, and creative solutions.</p>
+        </div>
+    </div>
+
+    <script>
+        function showOverlay() {
+            document.getElementById("overlay").style.display = "block";
+        }
+
+        function closeOverlay() {
+            document.getElementById("overlay").style.display = "none";
+        }
+    </script>
             <div class="col">
                 <div class="container">
                     <div class="hero-circle">
