--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col">
                 <h1 class="name">Thisitha Wickramaarachchi</h1>
                 <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;" class="font-effect-fire-animation">Thizh Wick</span></p>
-                <button type="button">Who Tf is Thizh</button></a>
+                <button type="button" onclick="showOverlay()>Who Tf is Thizh</button></a>
             </div>
                 <div id="overlay">
         <div id="close-button" onclick="closeOverlay()">X</div>
