--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
             <p  class="paragraphs">My commitment to excellence is reflected in my dedication to mastering various programming languages, software development methodologies, and emerging technologies. I relish the challenges that programming presents and thrive in the pursuit of elegant, efficient, and creative solutions.</p>
         </div>
+     </div>
     <div class="wrapper">
         <div class="navbar">
             <nav>
