--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
         <div class="row">
             <div class="col">
                 <h1 class="name">Thisitha Wickramaarachchi</h1>
-                <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;" class="font-effect-fire-animation">Thizh Wick</span></p>
-                <button type="button" onclick="showOverlay()">Who Tf is Thizh</button></a>
+                <p style="font-size: 20px;">I write <span style="color: aqua;">Code.</span></p>
+                <a href="mailto:thizhwick@gmail.com"><button type="button">Contact Me</button></a>
             </div>
-    </div>
             <div class="col">
                 <div class="container">
                     <div class="hero-circle">
