--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col">
                 <h1 class="name">Thisitha Wickramaarachchi</h1>
                 <p style="font-size: 20px;">I write <span style="color: aqua;">Code.</span></p>
-                <a href="mailto:thizhwick@gmail.com"><button type="button">Contact Me</button></a>
+                <button type="button">Who Tf is Thizh</button>
             </div>
             <div class="col">
                 <div class="container">
