--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="row">
             <div class="col">
                 <h1 class="name">Thisitha Wickramaarachchi</h1>
-                <p style="font-size: 20px;">I write <span style="color: aqua;">Code.</span></p>
-                <button type="button">Who Tf is Thizh</button>
+                <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;" class="font-effect-fire-animation">Thizh Wick</span></p>
+                <button type="button" onclick="showOverlay()">Who Tf is Thizh</button>
             </div>
             <div class="col">
                 <div class="container">
