--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div id="close-button" onclick="closeOverlay()">X</div>
         <div id="overlay-content">
         
-            <p  class="paragraphs"><span class="greet">Greetings!</span> I am a passionate and dedicated software engineering undergraduate at the prestigious Open University of Sri Lanka. My journey into the world of technology and programming has been a thrilling adventure, and I'm excited to share it with you.</p><br/>
+            <p  class="paragraphs"><span class="greet">Greetings!</span> I am a passionate and dedicated software engineering undergraduate at the prestigious Open University of Sri Lanka. My journey into the world of technology and programming has been a thrilling adventure.</p><br/>br/>
 
-            <p  class="paragraphs">As a student with a relentless curiosity and a hunger for knowledge, I've immersed myself in the ever-evolving field of programming. Through my academic pursuits and personal projects, I've honed my skills and embraced the art of problem-solving. My journey is fueled by a desire to create innovative solutions and to explore the limitless possibilities of code.</p><br/>
+            <p  class="paragraphs">As a student with a relentless curiosity and a hunger for knowledge, I've immersed myself in the ever-evolving field of programming. Through my academic pursuits and personal projects, I've honed my skills and embraced the art of problem-solving. My journey is fueled by a desire to create innovative solutions and to explore the limitless possibilities of code.</p><br/>,br/>
 
-            <p  class="paragraphs">My commitment to excellence is reflected in my dedication to mastering various programming languages, software development methodologies, and emerging technologies. I relish the challenges that programming presents and thrive in the pursuit of elegant, efficient, and creative solutions.</p><br/>
+            <p  class="paragraphs">My commitment to excellence is reflected in my dedication to mastering various programming languages, software development methodologies, and emerging technologies. I relish the challenges that programming presents and thrive in the pursuit of elegant, efficient, and creative solutions.</p><br/><br/>
         </div>
      </div>
     <div class="wrapper">
