--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <a href="https://github.com/Thizh" aria-label="my github"><img src="./assets/github.png" alt="my github"/></a>
                             </div>
                             <div class="social">
-                                <a href="https://discord.com/users/dalek_thyz" aria-label="my discord"><img src="./assets/discord.png" alt="my discord" /></a>
+                                <a href="https://discordapp.com/users/926325270133227600" aria-label="my discord"><img src="./assets/discord.png" alt="my discord" /></a>
                             </div>
                             <div class="social">
                                 <a href="https://www.linkedin.com/in/thizh" aria-label="my linkedin"><img src="./assets/linkedin.png" alt="my linkedin" /></a>
