modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <nav>
                     <ul>
                         <li><a href="#" style="visibility: hidden;">......</a></li>
-                        <li onclick="showOverlayCV()">Resume</a></li>
+                        <li onclick="showOverlayCV()" style="cursor: pointer;">Resume</a></li>
                     </ul>
                 </nav>
             </div>
