--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             class="font-effect-fire-animation">Thizh Wick</span></p>
                     <div style="flex-direction: row;">
                         <button type="button" onclick="showOverlayThizh()" class="thizh">Who Tf is Thizh?</button>
-                        <a href="./resume.html"><button type="button" class="resume-btn">Resume</button></a>
+                        <a href="./resume.html"><button type="button" class="resume-btn">résumé</button></a>
                     </div>
                 </div>
                 <div class="col">
