--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <nav>
                     <ul>
                         <li><a href="#" style="visibility: hidden;">......</a></li>
-                        <li onclick="showOverlayCV()" style="cursor: pointer;" id="resume">Resume</a></li>
+                        <li onclick="showOverlayCV()" style="cursor: pointer;" id="resume">résumé</a></li>
                     </ul>
                 </nav>
             </div>
@@ -81,7 +81,7 @@
                             class="font-effect-fire-animation">Thizh Wick</span></p>
                     <div style="flex-direction: row;">
                         <button type="button" onclick="showOverlayThizh()" class="thizh">Who Tf is Thizh?</button>
-                        <a href="./resume.html"><button type="button" class="resume-btn">résumé</button></a>
+                        <a href="https://drive.google.com/file/d/1Zhcyj0M42vsc0MhQwhctcfrPAKqKMahH/preview"><button type="button" class="resume-btn">résumé</button></a>
                     </div>
                 </div>
                 <div class="col">
