--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta property="og:description" content="An undergraduate student who wants to become better Software Engineer" />
     <title>ThIzH WiCk</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gluten&effect=fire-animation">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mouse.css">
-    <link rel="stylesheet" href="aurora.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/mouse.css">
+    <link rel="stylesheet" href="./styles/aurora.css">
     <link rel="stylesheet" href="snowflakes.css">
     <script>
         function showOverlayThizh() {
