modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/mouse.css">
     <link rel="stylesheet" href="./styles/aurora.css">
-    <link rel="stylesheet" href="snowflakes.css">
+    <link rel="stylesheet" href="./styles/snowflakes.css">
     <script>
         function showOverlayThizh() {
             document.getElementById("overlay-me").style.display = "block";
