--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="navbar">
                 <nav>
                     <ul>
-                        <li><a href="https://linktr.ee/thizh" style="cursor: pointer;" id="resume">linktree</a></li>
+                        <li><a href="https://linktr.ee/thizh" style="cursor: pointer;" id="resume">𝓵𝓲𝓷𝓴𝓽𝓻𝓮𝓮</a></li>
                         <li onclick="showOverlayCV()" style="cursor: pointer;" id="resume">résumé</a></li>
                     </ul>
                 </nav>
