--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         </div>
     </div>
     <div>
-        <iframe id="overlay-cv" src="https://drive.google.com/file/d/1Zhcyj0M42vsc0MhQwhctcfrPAKqKMahH/preview">
-        </iframe>
+        <iframe src="https://drive.google.com/file/d/1zM9DYXWYeIO9RzjGucRg6TfZQhMnnd5Y/preview"></iframe>
 
         <div class="wrapper">
             <div class="navbar">
